Services section finish!

--- a/css/style.scss
+++ b/css/style.scss
@@ -720,36 +720,54 @@ gap: 70px;
    
     }
 
-.services {
+
+.service-consulting {
     
-    height: 800px;
+    height: 890px;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
+    flex-direction: column;
     background-color: #F0EFE9;
-    //z-index: 1;
-}
 
-
+    .service-header {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        margin-top: 80px;;
+        
+    
 p#top-left {
     font-family: 'inter';
             font-size: 18px;
             color: #f94d1c;
+            padding-left: 75px;
+            //padding-top: 90px;
 }
 
 h1 {
     font-family: 'DM Sans', sans-serif;
             font-weight: 600;
             font-size: 55px;
+            padding-left: 75px;
+            width: 40%;
+}
 }
 
 /* Flexbox-stil för serviceboxarna */
 .service-boxes {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     justify-content: space-between;
     padding: 100px 70px;
+    position: relative;
+    //flex-wrap: wrap;
+
 }
+
+.service-boxes .service-box:nth-child(2) {
+    background-color: #edcf87; /* Byt ut denna färg till din önskade färg */
+}
+
+
 
 .service-box {
     flex: 1;
@@ -760,6 +778,18 @@ h1 {
     margin-right: 20px;
     width: 308px;
     height: 333px;
+    margin-bottom: 80px;
+    
+    position: relative;
+}
+.service-box::before {
+    content: '';
+    position: absolute;
+    top: 50px;
+    left: 27px;
+    width: 13%;
+    height: 2px;
+    background-color: black; /* Ändra färgen här om så önskas */
 }
 
 h2 {
@@ -767,14 +797,56 @@ h2 {
     font-family: 'dm sans';
     color: #191919;
     font-weight: 700;
+    text-align: left;
+    padding: 8px;
+    margin-top: 60px;
 }
 
 p {
     font-size: 16px;
     color: rgba(25,25,25,0.6980392156862745 );
     font-family: 'inter';
+    text-align: left;
+    padding: 8px;
 }
 
+.arrow-icon {
+    position: absolute;
+    bottom: 50px; /* Justera avståndet från botten här */
+    right: 30px; /* Justera avståndet från höger här */
+    display: inline-block;
+    padding: 12px;
+    border-radius: 50%; /* Skapar en rund bakgrund */
+    background-color: #0e0d0d; /* Bakgrundsfärgen runt pilen */
+}
+
+/* Justera storlek och färg på pilen */
+.fa-arrow-right {
+    font-size: 25px;
+}
+
+
+/* Stil för .btn-black */
+.btn-transparent {
+    display: flex;
+    justify-content: center; /* Centrera innehållet horisontellt */
+    align-items: center;
+    margin-left: auto;
+    position: absolute;
+    bottom: 95px; /* Justera detta för att placera knappen längst ner */
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+
+.container img {
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+}
+
+
+}
 
 
 
