--- a/css/style.scss
+++ b/css/style.scss
@@ -718,8 +718,7 @@ gap: 70px;
 }
 
    
-    }
-
+}
 
 .service-consulting {
     
@@ -848,6 +847,118 @@ p {
 
 }
 
+.about-our-company {
+height: 600px;
+.container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 40px;
+    margin: 100px;
+    margin-top: 180px;
+}
+
+.left-section {
+    
+    position: relative;
+top: -50px;
+    p {
+        color: #191919;
+    }
+
+    h5 {
+        color: #191919;
+        font-weight: 700;
+    }
+    .founders-text {
+        color: #f94d1c;
+        font-weight: 500;
+    }
+}
+
+.image-overlay {
+    position: absolute;
+    bottom: 50px;
+    left: -15%;
+    align-items: center;
+    justify-content: center; /* Centrera vertikalt */
+    background-color: #beebff;
+    color: white;
+    padding: 10px;
+    height: 150px;
+    width: 70%;
+    margin: auto;
+
+}
+
+.image-overlay h5,
+.image-overlay p {
+    margin: 5px; /* Ta bort standardmarginaler för p och h5 */
+}
+
+.image-overlay p {
+    margin-top: 20px; /* Lite utrymme mellan h5 och p */
+
+}
+
+
+.right-section {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 100px;
+    position: relative;
+    top: -50px;
+}
+
+.button-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 40px;
+}
+
+.btn-black {
+    margin-right: 40px; /* Justera detta avstånd efter behov */
+}
+
+.circle-play-container {
+    display: flex;
+    align-items: center;
+}
+
+.fa-circle-play {
+    color: #191919;
+    font-size: 24px;
+    margin-right: 5px;
+}
+
+.intro-video-text {
+    color: #191919;
+    font-size: 18px;
+}
+
+.about-company {
+    font-size: 18px;
+    font-family: 'inter';
+    color: #f94d1c;
+}
+
+.company-name {
+    font-size: 45px;
+    font-weight: 600;
+    font-family: 'dm sans';
+    width: 70%;
+}
+
+.small-text {
+    font-size: 14px;
+    margin-top: 10px;
+    color: rgba(25,25,25,0.6980392156862745 );
+    width: 70%;
+}
+
+}
 
 
 
