--- a/css/style.css
+++ b/css/style.css
@@ -817,106 +817,115 @@ header .container .menu .main-menu nav a.active::after, header .container .menu 
 
 .features {
   height: 500px;
+}
+.features .container-border {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   align-items: center;
   justify-content: space-around;
-  border: 2px solid #191919;
-  padding: 100px;
-  gap: 20px;
+  border: 1px solid #D1D1D1;
+  padding: 40px;
+  gap: 150px;
   box-sizing: border-box;
+  position: relative;
+  width: 1200px;
+  height: 550px;
+  margin-left: 140px;
+  margin-right: 80px;
+  margin-top: 50px;
 }
-.features .container1 {
-  width: 100%;
+.features .container-border .container1 {
+  width: 120%;
   padding-bottom: 130px;
   justify-content: center;
+  margin-right: 50px;
 }
-.features .container1 p {
+.features .container-border .container1 p {
   font-family: "inter";
   font-size: 18px;
   color: #f94d1c;
 }
-.features .container1 h2 {
+.features .container-border .container1 h2 {
   font-family: "DM Sans", sans-serif;
   font-weight: 600;
   font-size: 44px;
   margin-bottom: 20px;
 }
-.features .container1 .btn-red {
+.features .container-border .container1 .btn-red {
   display: inline-block; /* Gör knappen till en blocknivå-element för att ändra bredden */
   padding: 10px 120px; /* Justera padding för att ändra bredden */
   border: none;
   transition: background-color 0.3s ease;
 }
-.features .container2 {
-  width: 60%;
+.features .container-border .container2 {
+  width: 120%;
   padding: 20px;
   justify-content: center;
 }
-.features .container2 .profile-1 img {
+.features .container-border .container2 .profile-1 img {
   margin-bottom: 20px;
 }
-.features .container2 .profile-1 h5 {
-  margin-bottom: 20px;
-  font-family: "dm sans";
-  font-weight: 700;
-  font-size: 22px;
-  color: #191919;
-}
-.features .container2 .profile-1 p {
-  margin-bottom: 10px;
-  font-family: "inter";
-  font-size: 16px;
-  color: rgba(25, 25, 25, 0.6980392157);
-}
-.features .container2 .profile-2 img {
-  margin-bottom: 20px;
-}
-.features .container2 .profile-2 h5 {
+.features .container-border .container2 .profile-1 h5 {
   margin-bottom: 20px;
   font-family: "dm sans";
   font-weight: 700;
   font-size: 22px;
   color: #191919;
 }
-.features .container2 .profile-2 p {
+.features .container-border .container2 .profile-1 p {
   margin-bottom: 10px;
   font-family: "inter";
   font-size: 16px;
   color: rgba(25, 25, 25, 0.6980392157);
 }
-.features .container3 {
-  width: 60%;
+.features .container-border .container2 .profile-2 img {
+  margin-bottom: 20px;
+}
+.features .container-border .container2 .profile-2 h5 {
+  margin-bottom: 20px;
+  font-family: "dm sans";
+  font-weight: 700;
+  font-size: 22px;
+  color: #191919;
+}
+.features .container-border .container2 .profile-2 p {
+  margin-bottom: 10px;
+  font-family: "inter";
+  font-size: 16px;
+  color: rgba(25, 25, 25, 0.6980392157);
+}
+.features .container-border .container3 {
+  width: 120%;
   padding: 20px;
   justify-content: center;
 }
-.features .container3 .profile-3 img {
+.features .container-border .container3 .profile-3 img {
   margin-bottom: 20px;
 }
-.features .container3 .profile-3 h5 {
+.features .container-border .container3 .profile-3 h5 {
   font-family: "dm sans";
   font-weight: 700;
   font-size: 22px;
   color: #191919;
   margin-bottom: 20px;
 }
-.features .container3 .profile-3 p {
+.features .container-border .container3 .profile-3 p {
   margin-bottom: 10px;
   font-family: "inter";
   font-size: 16px;
   color: rgba(25, 25, 25, 0.6980392157);
 }
-.features .container3 .profile-4 img {
+.features .container-border .container3 .profile-4 img {
   margin-bottom: 20px;
 }
-.features .container3 .profile-4 h5 {
+.features .container-border .container3 .profile-4 h5 {
   margin-bottom: 20px;
   font-family: "dm sans";
   font-weight: 700;
   font-size: 22px;
   color: #191919;
 }
-.features .container3 .profile-4 p {
+.features .container-border .container3 .profile-4 p {
   margin-bottom: 10px;
   font-family: "inter";
   font-size: 16px;
